--- a/src/sass/bootstrap-custom/_type.scss
+++ b/src/sass/bootstrap-custom/_type.scss
@@ -65,6 +65,10 @@ h6, .h6 {
   .small {
     font-size: 75%;
   }
+  
+  blockquote & {
+	  margin-bottom: 0.5em;
+  }
 }
 
 h1, .h1 { font-size: $font-size-h1; }
@@ -180,12 +184,23 @@ ol {
 }
 
 ul {
-	list-style-type: disc;
-	list-style-position: outside;
+	list-style-type: none;
 	padding-left: 2rem;
 	
 	li {
+		position: relative;
 		margin-bottom: 1em;
+		&::before {
+			content: '';
+			display: block;
+			width: 4px;
+			height: 4px;
+			background: currentColor;
+			border-radius: 50%;
+			position: absolute;
+			left: -2rem;
+			top: 0.6em;
+		}
 	}
 }
 
@@ -317,6 +332,10 @@ blockquote {
   margin: 0 0 $line-height-computed;
   font-size: $blockquote-font-size;
   border-left: $blockquote-border-width solid $blockquote-border-color;
+  
+  *:first-child {
+	  margin-top: 0;
+  }
 
   p,
   ul,
