--- a/src/sass/bootstrap-custom/_media.scss
+++ b/src/sass/bootstrap-custom/_media.scss
@@ -30,11 +30,17 @@
 .media-right,
 .media > .pull-right {
   padding-left: $font-size-base * 2;
+  @media (max-width: $screen-sm - 1) {
+	  margin-bottom: $grid-gutter-width;
+  }
 }
 
 .media-left,
 .media > .pull-left {
   padding-right: $font-size-base * 2;
+  @media (max-width: $screen-sm - 1) {
+	  margin-bottom: $grid-gutter-width;
+  }
 }
 
 .media-left,
@@ -42,6 +48,15 @@
 .media-body {
   display: table-cell;
   vertical-align: top;
+  @media (max-width: $screen-sm - 1) {
+	  display: block;
+	  width: 100%;
+	  padding: 0;
+	  
+	  img {
+		  width: 100%;
+	  }
+  }
 }
 
 .media-middle {
