--- a/src/sass/_override-variables.scss
+++ b/src/sass/_override-variables.scss
@@ -192,14 +192,14 @@ $table-border-color:            #eee;
 
 $btn-font-weight:                normal !default;
 
-$btn-default-color:              $brown-base;
+$btn-default-color:              #cfa785;
 $btn-default-bg:                 transparent;
-$btn-default-hover-bg:           $brown-base;
-$btn-default-border:             $brown-base;
+$btn-default-hover-bg:           #c39167;
+$btn-default-border:             #cfa785;
 
 $btn-primary-color:              #fff !default;
-$btn-primary-bg:                 $brand-primary !default;
-$btn-primary-hover-bg:           $brand-primary-light-2;
+$btn-primary-bg:                 #e67161;
+$btn-primary-hover-bg:           #e04e39;
 $btn-primary-border:             transparent;
 
 $btn-secondary-color:              #fff !default;
