--- a/src/sass/bootstrap-custom/_pagination.scss
+++ b/src/sass/bootstrap-custom/_pagination.scss
@@ -2,6 +2,7 @@
 // Pagination (multiple pages)
 // --------------------------------------------------
 .pagination {
+	@include list-unstyled;
   display: inline-block;
   padding-left: 0;
   margin: $line-height-computed 0;
