--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -7,6 +7,15 @@
 		padding: 25px 0 33px;
 	}
 	
+	.btn-default {
+		color: $footer-color;
+		border-color: $footer-color;
+		&:hover {
+			border-color: transparent;
+			color: #fff;
+		}
+	}
+	
 	.btn-default.btn-sm {
 		@media (min-width: $screen-sm) and (max-width: $screen-md){
 			padding-left: 1em;
