--- a/src/sass/components/_serv-button.scss
+++ b/src/sass/components/_serv-button.scss
@@ -11,6 +11,7 @@
 	&:focus {
 		color: #fff;
 		text-decoration: none;
+		outline: none;
 		background: url('images/serv-bg.png') top left no-repeat, linear-gradient(-150deg, #e67161 0%, #c39167 100%);
 	}
 	
