--- a/src/sass/components/menus/_header-menu.scss
+++ b/src/sass/components/menus/_header-menu.scss
@@ -1,6 +1,7 @@
 .header-menu {
 	$font-size: $font-size-base - 1;
 	margin-top: 1em;
+	margin-right: 190px; // тут телефон
 	
 	&__wrapper {
 		padding-top: 2rem;
