--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -58,8 +58,16 @@
 		color: $brand-primary;
 		margin-bottom: 1em;
 		
-		a:hover {
+		a:hover,
+		a:active,
+		a:focus {
 			text-decoration: none;
+			outline: none;
+			
+			.icon {
+				background: currentColor;
+				fill: #fff;
+			}
 		}
 		
 		.icon {
