--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -99,6 +99,10 @@
 				border-radius: 50%;
 				margin-right: 2rem;
 				background: currentColor;
+				
+				@media (min-width: $screen-sm) and (max-width: $screen-md - 1) {
+					margin-right: 1rem;
+				}
 			}
 			span {
 				color: #fff;
