--- a/src/sass/components/_news.scss
+++ b/src/sass/components/_news.scss
@@ -17,4 +17,11 @@
 			color: currentColor;
 		}
 	}
+	
+	.readmore,
+	.readmore:hover,
+	.readmore:focus,
+	.readmore:active {
+		color: $brown-lighter;
+	}
 }
