--- a/src/sass/components/_search.scss
+++ b/src/sass/components/_search.scss
@@ -30,6 +30,7 @@
 		
 		@media (min-width: $screen-md){
 			fill: #dbbda4;
+			color: #dbbda4;
 			top: 4px; // 25px - height of box, (25 - 17) / 2
 		}
 	}
