--- a/src/sass/components/menus/_header-menu.scss
+++ b/src/sass/components/menus/_header-menu.scss
@@ -23,7 +23,7 @@
 			padding: 0 20px;
 		}
 		&__link {
-			display: inline;
+			display: block;
 			text-decoration: underline;
 			padding: 0;
 			white-space: initial;
