--- a/src/sass/_override-variables.scss
+++ b/src/sass/_override-variables.scss
@@ -812,7 +812,7 @@ $panel-danger-border:         $state-danger-border !default;
 $panel-danger-heading-bg:     $state-danger-bg !default;
 
 $panel-custom-text:          $gray-dark !default;
-$panel-custom-border:        #f3e9e1;
+$panel-custom-border:        #e7d3c2;
 $panel-custom-heading-bg:    #f5f5f5 !default;
 
 //== Thumbnails
