--- a/src/sass/bootstrap-custom/_buttons.scss
+++ b/src/sass/bootstrap-custom/_buttons.scss
@@ -20,14 +20,14 @@
   @include button-size($padding-base-vertical, $padding-base-horizontal, $font-size-base, $line-height-base, $btn-border-radius-base);
   @include user-select(none);
 
-  &,
+  /*&,
   &:active,
   &.active {
     &:focus,
     &.focus {
       @include tab-focus;
     }
-  }
+  }*/
 
   &:hover,
   &:focus,
@@ -40,7 +40,7 @@
   &.active {
     outline: 0;
     background-image: none;
-    @include box-shadow(inset 0 3px 5px rgba(0,0,0,.125));
+    //@include box-shadow(inset 0 3px 5px rgba(0,0,0,.125));
   }
 
   &.disabled,
