--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -87,6 +87,7 @@
 			
 			.icon {
 				fill: $footer-top-bg;
+				color: $footer-top-bg;
 				margin-top: 2px;
 				width: 100%;
 				height: 100%;
@@ -97,6 +98,7 @@
 				height: $font-size-small * 2;
 				padding: $font-size-small/4 $font-size-small/4 0;
 				border-radius: 50%;
+				overflow: hidden;
 				margin-right: 2rem;
 				background: currentColor;
 				
@@ -130,6 +132,16 @@
 		}
 	}
 	&-contacts {
+		
+		a:not(.btn),
+		a:not(.btn):hover,
+		a:not(.btn):focus,
+		a:not(.btn):active {
+			color: currentColor;
+			text-decoration: none;
+			outline: none;
+		}
+		
 		&__tel {
 			font-size: $font-size-large - 1;
 			line-height: $btn-sm-height;
