--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -272,7 +272,7 @@
 	
 	&__bottom {
 		background: $header-bottom-bg;
-		margin-bottom: $grid-gutter-width;
+		margin-bottom: 1em;
 		
 		.page:not(.page-home) & {
 			@media (max-width: $screen-md - 1){
@@ -281,7 +281,7 @@
 		}
 		
 		&-logo {
-			padding: 2rem 1rem;
+			padding: 2rem 1rem 0;
 			text-align: right;
 			
 			@media (min-width: $screen-md){
