--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -360,8 +360,10 @@
 			outline: none;
 			
 			.arrow-down {
-				background: currentColor;
+				background: $link-color;
 				fill: #fff;
+				color: #fff;
+				border-color: transparent;
 			}
 		}
 		
