--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -94,6 +94,7 @@
 			}
 			.icon-wrapper {
 				display: inline-block;
+				vertical-align: middle;
 				width: $font-size-small * 2;
 				height: $font-size-small * 2;
 				padding: $font-size-small/4 $font-size-small/4 0;
