--- a/src/sass/_override-variables.scss
+++ b/src/sass/_override-variables.scss
@@ -47,7 +47,7 @@ $text-color:            $gray-base;
 
 //** Global textual link color.
 $link-color:            $brand-primary !default;
-$link-hover-color:      $brand-primary;
+$link-hover-color:      $brown-base;
 //** Link hover decoration.
 $link-hover-decoration: underline !default;
 
