--- a/src/sass/bootstrap-custom/_close.scss
+++ b/src/sass/bootstrap-custom/_close.scss
@@ -12,8 +12,7 @@
   text-shadow: $close-text-shadow;
   @include opacity(.2);
 
-  &:hover,
-  &:focus {
+  @include hover {
     color: $close-color;
     text-decoration: none;
     cursor: pointer;
