--- a/src/sass/bootstrap-custom/_scaffolding.scss
+++ b/src/sass/bootstrap-custom/_scaffolding.scss
@@ -49,15 +49,11 @@ a {
   color: $link-color;
   text-decoration: none;
 
-  &:hover,
-  &:focus {
-    color: $link-hover-color;
+  @include hover {
+	color: $link-hover-color;
     text-decoration: $link-hover-decoration;
   }
-
-  &:focus {
-    @include tab-focus;
-  }
+  @include non-focus;
 }
 
 
