--- a/src/sass/bootstrap-custom/mixins/_buttons.scss
+++ b/src/sass/bootstrap-custom/mixins/_buttons.scss
@@ -8,33 +8,23 @@
   background-color: $background;
   border-color: $border;
 
-  &:focus,
-  &.focus {
-    color: $color;
+  @include hover {
+	color: $color;
     background-color: darken($background, 10%);
-        border-color: darken($border, 25%);
+    border-color: darken($border, 12%);
   }
-  &:hover {
-    color: $color;
-    background-color: darken($background, 10%);
-        border-color: darken($border, 12%);
-  }
-  &:active,
   &.active,
   .open > &.dropdown-toggle {
     color: $color;
     background-color: darken($background, 10%);
         border-color: darken($border, 12%);
 
-    &:hover,
-    &:focus,
-    &.focus {
+    @include hover {
       color: $color;
       background-color: darken($background, 17%);
           border-color: darken($border, 25%);
     }
   }
-  &:active,
   &.active,
   .open > &.dropdown-toggle {
     background-image: none;
@@ -42,9 +32,7 @@
   &.disabled,
   &[disabled],
   fieldset[disabled] & {
-    &:hover,
-    &:focus,
-    &.focus {
+    @include hover {
       background-color: $background;
           border-color: $border;
     }
