--- a/src/sass/bootstrap-custom/_buttons.scss
+++ b/src/sass/bootstrap-custom/_buttons.scss
@@ -20,27 +20,16 @@
   @include button-size($padding-base-vertical, $padding-base-horizontal, $font-size-base, $line-height-base, $btn-border-radius-base);
   @include user-select(none);
 
-  /*&,
-  &:active,
-  &.active {
-    &:focus,
-    &.focus {
-      @include tab-focus;
-    }
-  }*/
 
-  &:hover,
-  &:focus,
-  &.focus {
+  @include hover {
     color: $btn-default-color;
     text-decoration: none;
+    background-image: none;
   }
 
-  &:active,
   &.active {
     outline: 0;
     background-image: none;
-    //@include box-shadow(inset 0 3px 5px rgba(0,0,0,.125));
   }
 
   &.disabled,
@@ -51,6 +40,8 @@
     @include box-shadow(none);
   }
 
+  @include non-focus;
+  
   // [converter] extracted a& to a.btn
 }
 
@@ -72,7 +63,7 @@ a.btn {
 @mixin btn-default {
   @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border);
   
-  &:hover {
+  @include hover {
 	  color: #fff;
 	  background: $btn-default-hover-bg;
 	  border-color: transparent;
@@ -84,7 +75,8 @@ a.btn {
 @mixin btn-primary {
   @include button-variant($btn-primary-color, $btn-primary-bg, $btn-primary-border);
   
-  &:hover {
+  @include hover {
+	  color: $btn-primary-color;
 	  background: $btn-primary-hover-bg;
   }
 }
