--- a/src/sass/bootstrap-custom/_dropdowns.scss
+++ b/src/sass/bootstrap-custom/_dropdowns.scss
@@ -20,6 +20,7 @@
 .dropup,
 .dropdown {
   position: relative;
+  @include non-focus;
 }
 
 // Prevent the focus on the dropdown toggle when closing dropdowns
@@ -77,8 +78,7 @@
 
 // Hover/Focus state
 .dropdown-menu > li > a {
-  &:hover,
-  &:focus {
+  @include hover {
     text-decoration: none;
     color: $dropdown-link-hover-color;
     background-color: $dropdown-link-hover-bg;
@@ -87,14 +87,13 @@
 
 // Active state
 .dropdown-menu > .active > a {
-  &,
-  &:hover,
-  &:focus {
     color: $dropdown-link-active-color;
     text-decoration: none;
-    outline: 0;
     background-color: $dropdown-link-active-bg;
-  }
+	@include hover {
+		color: $dropdown-link-active-color;
+		 background-color: $dropdown-link-active-bg;
+	}
 }
 
 // Disabled state
@@ -102,15 +101,13 @@
 // Gray out text and ensure the hover/focus state remains gray
 
 .dropdown-menu > .disabled > a {
-  &,
-  &:hover,
-  &:focus {
+  color: $dropdown-link-disabled-color;
+  @include hover {
     color: $dropdown-link-disabled-color;
   }
 
   // Nuke hover/focus effects
-  &:hover,
-  &:focus {
+  @include hover {
     text-decoration: none;
     background-color: transparent;
     background-image: none; // Remove CSS gradient
