--- a/src/sass/bootstrap-custom/_mixins.scss
+++ b/src/sass/bootstrap-custom/_mixins.scss
@@ -16,6 +16,7 @@
 @import "mixins/text-emphasis";
 @import "mixins/text-overflow";
 @import "mixins/vendor-prefixes";
+@import "mixins/hover";
 
 // Components
 @import "mixins/alerts";
