--- a/src/sass/bootstrap-custom/_navs.scss
+++ b/src/sass/bootstrap-custom/_navs.scss
@@ -20,8 +20,7 @@
       position: relative;
       display: block;
       padding: $nav-link-padding;
-      &:hover,
-      &:focus {
+      @include hover {
         text-decoration: none;
         background-color: $nav-link-hover-bg;
       }
@@ -31,8 +30,7 @@
     &.disabled > a {
       color: $nav-disabled-link-color;
 
-      &:hover,
-      &:focus {
+      @include hover {
         color: $nav-disabled-link-hover-color;
         text-decoration: none;
         background-color: transparent;
@@ -43,12 +41,12 @@
 
   // Open dropdowns
   .open > a {
-    &,
-    &:hover,
-    &:focus {
       background-color: $nav-link-hover-bg;
       border-color: $link-color;
-    }
+	  @include hover {
+		  background-color: $nav-link-hover-bg;
+		  border-color: $link-color;
+	  }
   }
 
   // Nav dividers (deprecated with v3.0.1)
@@ -93,15 +91,18 @@
 
     // Active state, and its :hover to override normal :hover
     &.active > a {
-      &,
-      &:hover,
-      &:focus {
         color: $nav-tabs-active-link-hover-color;
         background-color: $nav-tabs-active-link-hover-bg;
         border: 1px solid $nav-tabs-active-link-hover-border-color;
         border-bottom-color: transparent;
         cursor: default;
-      }
+		@include hover {
+			color: $nav-tabs-active-link-hover-color;
+			background-color: $nav-tabs-active-link-hover-bg;
+			border: 1px solid $nav-tabs-active-link-hover-border-color;
+			border-bottom-color: transparent;
+			cursor: default;
+		}
     }
   }
   // pulling this in mainly for less shorthand
@@ -125,7 +126,7 @@
 	  color: $nav-pills-link-color;
       background-color: $nav-pills-link-bg;
 	  
-	  &:hover {
+	  @include hover {
 		  color: $nav-pills-link-hover-color;
           background-color: $nav-pills-link-hover-bg;
 	  }
@@ -136,12 +137,13 @@
 
     // Active state
     &.active > a {
-      &,
-      &:hover,
-      &:focus {
         color: $nav-pills-active-link-color;
         background-color: $nav-pills-active-link-bg;
-      }
+		
+		@include hover {
+			color: $nav-pills-active-link-color;
+			background-color: $nav-pills-active-link-bg;
+		}
     }
   }
 }
