--- a/src/sass/bootstrap-custom/mixins/_tab-focus.scss
+++ b/src/sass/bootstrap-custom/mixins/_tab-focus.scss
@@ -7,3 +7,9 @@
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
+
+@mixin non-focus() {
+	&:focus {
+		outline: none;
+	}
+}
