--- a/src/sass/components/_news.scss
+++ b/src/sass/components/_news.scss
@@ -15,13 +15,17 @@
 		
 		a {
 			color: currentColor;
+			@include hover {
+				color: currentColor;
+				text-decoration: none;
+			}
 		}
 	}
 	
-	.readmore,
-	.readmore:hover,
-	.readmore:focus,
-	.readmore:active {
+	.readmore  {
 		color: $brown-lighter;
+		@include hover {
+			color: $brown-lighter;
+		}
 	}
 }
