--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -145,7 +145,7 @@
 			.header-button {
 				float: left;
 				width: auto;
-				margin-right: 1em;
+				margin-right: 5%;
 				color: #fff;
 				
 				@media (min-width: $screen-sm){
