--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -55,13 +55,13 @@
 	}
 	
 	&__panel-title {
-		color: $brand-primary;
+		color: $link-color;
 		margin-bottom: 1em;
 		
 		a {
 			@include hover {
 				text-decoration: none;
-				
+				color: $link-color;
 				.icon {
 					background: $link-color;
 					fill: #fff;
