--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -4,7 +4,7 @@
 	
 	&__top {
 		background: $footer-top-bg;
-		padding: 25px 0 33px;
+		padding: 2.5rem 0 3rem;
 	}
 	
 	.btn-default {
@@ -76,14 +76,14 @@
 				margin-top: 1rem;
 			}
 			@media (min-width: $screen-md){
-				margin-top: -1rem;
+				margin-top: -2rem;
 			}
 		}
 	}
 	
 	&-lk {
 		&__title {
-			margin-bottom: 1em;
+			margin-bottom: 0.9em;
 			
 			.icon {
 				fill: $footer-top-bg;
@@ -100,22 +100,23 @@
 				padding: $font-size-small/4 $font-size-small/4 0;
 				border-radius: 50%;
 				overflow: hidden;
-				margin-right: 2rem;
+				margin-right: 1rem;
 				background: currentColor;
 				
-				@media (min-width: $screen-sm) and (max-width: $screen-md - 1) {
-					margin-right: 1rem;
-				}
 			}
 			span {
 				color: #fff;
 			}
 		}
 		&__links {
-			margin: 1em 0;
+			margin: 0.9em 0;
+			padding-left: 1em;
 			
 			li {
-				margin-bottom: 0.5em;
+				margin-bottom: 0.4em;
+				&::before {
+					left: -1em;
+				}
 			}
 			
 			a {
@@ -171,7 +172,7 @@
 	
 	&__bottom {
 		background: $footer-bottom-bg;
-		padding: 2rem 0;
+		padding: 1.7rem 0 2rem;
 		
 		@media (max-width: $screen-xs){
 			padding: 1em 0 26px;
