изменение основных стилей!

--- a/src/sass/bootstrap-custom/_normalize.scss
+++ b/src/sass/bootstrap-custom/_normalize.scss
@@ -439,4 +439,9 @@ svg {
 		border-radius: 50%;
 		border: 1px solid currentColor;
 	}
+	&.icon-circle {
+		padding: 4px;
+		border-radius: 50%;
+		border: 1px solid currentColor;
+	}
 }
