--- a/src/sass/pages/mfc-map.scss
+++ b/src/sass/pages/mfc-map.scss
@@ -98,14 +98,21 @@
 	&__list {
 		@include flex-default(stretch);
 		flex-wrap: wrap;
+		@media (min-width: $screen-sm) {
+			margin-bottom: 1.5rem;
+		}
 	}
 	
 	&__item {
 		@include flex-default(stretch);
-		margin-bottom: 2.2rem;
+		margin-bottom: 2rem;
+		
+		&:last-child {
+			margin-bottom: 0;
+		}
 		
 		&-inner {
-			padding-bottom: 2.1rem;
+			padding-bottom: 2rem;
 			border-bottom: 1px solid $hr-color;
 		}
 		
@@ -116,11 +123,6 @@
 			}
 		}
 		@media (min-width: $screen-sm) {
-			margin-bottom: 2.4rem;
-			
-			&-inner {
-				padding-bottom: 2.2rem;
-			}
 			
 			&:nth-child(3n + 1):last-child &-inner,
 			&:nth-child(3n + 2):last-child &-inner,
@@ -130,12 +132,6 @@
 			&:nth-last-child(3n + 3):first-child ~ &:nth-last-child(3) &-inner {
 				padding-bottom: 0;
 				border-bottom: 0;
-			}
-		}
-		@media (min-width: $screen-md) {
-			margin-bottom: 2.7rem;
-			&-inner {
-				padding-bottom: 2rem;
 			}
 		}
 	}
