mfc-map #issue 2

--- a/src/sass/pages/mfc-map.scss
+++ b/src/sass/pages/mfc-map.scss
@@ -99,7 +99,10 @@
 		@include flex-default(stretch);
 		flex-wrap: wrap;
 		@media (min-width: $screen-sm) {
-			margin-bottom: 1.5rem;
+			margin-bottom: 2rem;
+		}
+		@media (min-width: $screen-md) {
+			margin-bottom: 4rem;
 		}
 	}
 	
