--- a/src/sass/template_styles.scss
+++ b/src/sass/template_styles.scss
@@ -6,6 +6,7 @@
 
 @import 'components/layout';
 @import 'components/menus/menus';
+@import 'components/action-block';
 
 @import 'components/news';
 @import 'components/contacts';
@@ -13,3 +14,4 @@
 @import 'components/serv-button';
 @import 'components/search';
 @import 'components/carousel';
+@import 'components/chosen-custom';
