--- a/src/sass/bootstrap-custom/_buttons.scss
+++ b/src/sass/bootstrap-custom/_buttons.scss
@@ -183,9 +183,12 @@ $btn-xs-height: (3px * 2 + 1px) + ($font-size-base + 1px) + 2px;
 // Block button
 // --------------------------------------------------
 
-.btn-block {
+@mixin btn-block {
   display: block;
   width: 100%;
+}
+.btn-block {
+	@include btn-block;
 }
 
 // Vertically space out multiple block buttons
