--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,6 +1,9 @@
 .footer {
 	color: $footer-color;
-	margin-top: 40px;
+	margin-top: 2.5rem;
+	@media (min-width: $screen-md){
+		margin-top: 4rem;
+	}
 	
 	&__top {
 		background: $footer-top-bg;
