--- a/src/sass/pages/faq.scss
+++ b/src/sass/pages/faq.scss
@@ -10,6 +10,10 @@
 		&:last-child {
 			margin-bottom: 0;
 		}
+		
+		@media (min-width: $screen-sm){
+			margin-bottom: 1.7rem;
+		}
 	}
 	
 	&__item-date {
@@ -19,13 +23,16 @@
 	}
 	
 	&__item-preview-text {
-		.readmore {
-			@media (min-width: $screen-sm) {
-				margin-left: 0.5rem;
-			}
-		}
 		>*:last-child {
 			margin-bottom: 0;
+		}
+		.text {
+			margin-right: 0.5rem;
+			
+			@media (max-width: $screen-sm - 1){
+				display: inline-block;
+				margin-bottom: 0.5rem;
+			}
 		}
 	}
 	
@@ -46,16 +53,25 @@
 		}
 		
 		select.form-control {
+			width: 100%;
+			line-height: 28px;
+			padding: 0 $padding-base-horizontal;
+			height: 30px;
 			@media (min-width: $screen-sm) {
 				width: 255px;
 				margin: 0;
 			}
 		}
+		.chosen-container {
+			min-width: 100%;
+			@media (min-width: $screen-sm) {
+				min-width: 255px;
+			}
+		}
+		
 		
 		.btn {
-			@media (max-width: $screen-sm - 1) {
-				max-width: 270px;
-			}
+			max-width: 100%;
 			@media (min-width: $screen-sm) {
 				margin-left: 0.5em;
 				padding-left: 2.5rem;
